<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_progress_bar"
        android:title="@string/action_progress_bar_title"
        android:visible="false"
        android:orderInCategory="5"
        android:showAsAction="ifRoom"
        android:actionLayout="@layout/action_view_progress" />

    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings_title"
        android:orderInCategory="10"
        android:showAsAction="never" />

    <item
        android:id="@+id/action_refresh_from_dropbox"
        android:title="@string/action_refresh_title"
        android:orderInCategory="1000"
        android:icon="@drawable/ic_action_refresh"
        android:showAsAction="never" />

    <item
        android:id="@+id/action_save_to_dropbox"
        android:title="@string/action_save_title"
        android:orderInCategory="1010"
        android:icon="@drawable/ic_action_save_light"
        android:showAsAction="never" />

    <item
        android:id="@+id/action_show_network_log"
        android:title="@string/action_show_network_log_title"
        android:orderInCategory="1015"
        android:showAsAction="never" />

    <item
        android:id="@+id/action_about"
        android:title="@string/action_about_title"
        android:orderInCategory="1030"
        android:showAsAction="never" />


</menu>