<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item android:id="@+id/action_save"
        android:title="@string/action_save_title"
        android:icon="@drawable/ic_action_save_light"
        android:orderInCategory="910"
        android:showAsAction="ifRoom"/>

    <item android:id="@+id/action_cancel"
        android:title="@string/btnCancel_text"
        android:icon="@drawable/ic_action_cancel"
        android:orderInCategory="910"
        android:showAsAction="ifRoom"/>

    <item android:id="@+id/action_clear"
        android:title="@string/action_clear_title"
        android:icon="@drawable/ic_notification_clear_all"
        android:orderInCategory="900"
        android:showAsAction="never"/>
    <item android:id="@+id/action_change_item_type"
        android:title="@string/action_change_item_category_title"
        android:orderInCategory="905"
        android:showAsAction="never"/>


</menu>