<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="10dp">


    <Button
        android:id="@+id/btnCreateNewUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/setting_button"
        android:text="@string/btnCreateNewUser_text" />

    <Button
        android:id="@+id/btnEditUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/setting_button"
        android:text="@string/btnEditUserName_text" />

    <Button
        android:id="@+id/btnDeleteUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/setting_button"
        android:text="@string/btnDeleteUser_text" />



</LinearLayout>