<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <EditText
        android:id="@+id/txtItemName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:selectAllOnFocus="true"
        android:inputType="textCapWords"
        style="@style/txtPasswordStyle"
        android:hint="@string/txtItemName_hint" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="8"
                    android:layout_height="wrap_content"
                    style="@style/tvPasswordStyle"
                    android:text="@string/general_account_title" />

                <EditText
                    android:id="@+id/txtAccountNumber"
                    android:layout_width="0dp"
                    android:layout_weight="20"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:gravity="left"
                    style="@style/txtPasswordStyle"
                    android:hint="@string/txtAccountNumber_hint" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="8"
                    android:layout_height="wrap_content"
                    style="@style/tvPasswordStyle"
                    android:text="@string/edit_primary_text" />

                <EditText
                    android:id="@+id/txtPrimaryPhoneNumber"
                    android:layout_width="0dp"
                    android:layout_weight="20"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    style="@style/txtPasswordStyle"
                    android:hint="@string/txtPrimaryPhoneNumber_hint" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="8"
                    android:layout_height="wrap_content"
                    style="@style/tvPasswordStyle"
                    android:text="@string/edit_alternate_text" />

                <EditText
                    android:id="@+id/txtAlternatePhoneNumber"
                    android:layout_width="0dp"
                    android:layout_weight="20"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    style="@style/txtPasswordStyle"
                    android:hint="@string/txtAlternatePhoneNumber_hint" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>