<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_marginTop="60dp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tvProgressBarCaption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLines="2"
        android:layout_gravity="center"
        style="@style/tvPasswordStyle"
        android:visibility="gone"
        android:text="Syncing with Dropbox \n                        . . . Please wait"/>

    <TextView
        android:id="@+id/tvFirstTimeMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        style="@style/tvPasswordStyle"/>

    <Button
        android:id="@+id/btnSelectDropboxFolder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/setting_button"
        android:text="@string/btnSelectDropboxFolder_text" />

    <Button
        android:id="@+id/btnCreateNewUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/setting_button"
        android:text="@string/btnCreateNewUser_text" />

    <Button
        android:id="@+id/btnSelectUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/setting_button"
        android:text="@string/btnSelectUser_text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/txtAppPassword"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:layout_gravity="center"
            android:hint="@string/txtAppPassword_hint" />

        <Button
            android:id="@+id/btnDisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/btnDisplay_text" />

    </LinearLayout>

    <Button
        android:id="@+id/btnOK"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/setting_button"
        android:text="@string/btnOK_text" />

    <Button
        android:id="@+id/btnOkReadPasswordFile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/setting_button"
        android:text="OK, Read Password File" />


</LinearLayout>